Added support for ntu

--- a/Mozilla Firefox/Source code/manifest.json
+++ b/Mozilla Firefox/Source code/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Docjava dark mode!",
   "description": "Turns the webpage into a dark mode version..\nProgram by Guacamoleboy",
-  "version": "1.0",
+  "version": "1.1",
   "browser_specific_settings": {
   "gecko": {
     "id": "cph-jl325@cphbusiness.dk"
@@ -17,6 +17,12 @@
     {
       "matches": ["http://www.docjava.dk/*"],
       "css": ["scripts/guac.css"]
+    },
+    {
+      "matches": ["https://www3.ntu.edu.sg/*"],
+      "css": ["scripts/ntu.css"],
+      "run_at": "document_end",
+      "world": "MAIN"
     }
   ]
 }
