--- a/Opera/manifest.json
+++ b/Opera/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Docjava dark mode!",
-  "description": "Turns the webpage into a dark mode version..\nProgram by Guacamoleboy",
-  "version": "1.0",
+  "description": "Turns the webpage into a dark mode version.. Program by Guacamoleboy",
+  "version": "1.1",
   "manifest_version": 3,
     "icons": {
       "16": "images/16.png",
@@ -12,6 +12,12 @@
     {
       "matches": ["http://www.docjava.dk/*"],
       "css": ["scripts/guac.css"]
+    },
+    {
+      "matches": ["https://www3.ntu.edu.sg/*"],
+      "css": ["scripts/ntu.css"],
+      "run_at": "document_end",
+      "world": "MAIN"
     }
   ]
 }
